force-app/main/default/objects/Pokemon__c/fields/Can_Evolve__c.field-meta.xml
<CustomField>
    <fullName>Can_Evolve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this species can evolve by level-up, evolution stone, or friendship (stamped at catch from the species seed). Trade-only evolutions are not flagged.</description>
    <label>Can Evolve</label>
    <type>Checkbox</type>
</CustomField>