force-app/main/default/objects/Pokemon__c/fields/Capture_Rate__c.field-meta.xml
<CustomField>
    <fullName>Capture_Rate__c</fullName>
    <label>Capture Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>