force-app/main/default/objects/Pokemon__c/fields/EXP_Points__c.field-meta.xml
<CustomField>
    <fullName>EXP_Points__c</fullName>
    <label>EXP Points</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>