force-app/main/default/objects/Pokemon__c/fields/Is_Mine__c.field-meta.xml
<CustomField>
    <fullName>Is_Mine__c</fullName>
    <description>Checkbox formula, true when the running user owns this Pokemon's trainer. Powers the My Pokemon list view — Pokemon is the detail side of a master-detail (no OwnerId), so the standard My scope is unavailable.</description>
    <label>Is Mine</label>
    <formula>Pokemon_Trainer__r.OwnerId = $User.Id</formula>
    <type>Checkbox</type>
</CustomField>