force-app/main/default/objects/Pokemon__c/fields/Is_Shiny__c.field-meta.xml
<CustomField>
    <fullName>Is_Shiny__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Shiny</label>
    <type>Checkbox</type>
</CustomField>