force-app/main/default/objects/Pokemon__c/fields/Is_Traded__c.field-meta.xml
<CustomField>
    <fullName>Is_Traded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Traded</label>
    <type>Checkbox</type>
</CustomField>