force-app/main/default/objects/Pokemon__c/fields/Move_1__c.field-meta.xml
<CustomField>
    <fullName>Move_1__c</fullName>
    <label>Move 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>