force-app/main/default/objects/Pokemon__c/fields/Pokedex_Number__c.field-meta.xml
<CustomField>
    <fullName>Pokedex_Number__c</fullName>
    <label>Pokedex Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>