force-app/main/default/objects/Pokemon__c/fields/Pokemon_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Trainer__c</fullName>
    <label>Pokemon Trainer</label>
    <referenceTo>Pokemon_Trainer__c</referenceTo>
    <relationshipLabel>Pokemon</relationshipLabel>
    <relationshipName>Pokemon</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>