force-app/main/default/objects/Pokemon__c/fields/Species_Name__c.field-meta.xml
<CustomField>
    <fullName>Species_Name__c</fullName>
    <label>Species Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>