force-app/main/default/objects/Pokemon__c/fields/Sprite__c.field-meta.xml
<CustomField>
    <fullName>Sprite__c</fullName>
    <label>Sprite</label>
    <formula>IMAGE(Image__c, Species_Name__c, 40, 40)</formula>
    <type>Text</type>
</CustomField>