force-app/main/default/objects/Pokemon__c/fields/Type_2__c.field-meta.xml
<CustomField>
    <fullName>Type_2__c</fullName>
    <label>Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pokemon_Type</valueSetName>
    </valueSet>
</CustomField>