force-app/main/default/objects/Pokemon__c/validationRules/EXP_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>EXP_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED(EXP_Points__c)) &amp;&amp; (ISBLANK(EXP_Points__c) || EXP_Points__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>EXP_Points__c</errorDisplayField>
    <errorMessage>A Pokemon must have EXP of zero or greater.</errorMessage>
</ValidationRule>