force-app/main/default/objects/Pokemon__c/validationRules/EXP_Cannot_Decrease.validationRule-meta.xml
<ValidationRule>
    <fullName>EXP_Cannot_Decrease</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(EXP_Points__c) &amp;&amp; EXP_Points__c &lt; PRIORVALUE(EXP_Points__c)</errorConditionFormula>
    <errorDisplayField>EXP_Points__c</errorDisplayField>
    <errorMessage>A Pokemon's EXP cannot decrease.</errorMessage>
</ValidationRule>