force-app/main/default/objects/Pokemon__c/validationRules/Is_Traded_Cannot_Revert.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Traded_Cannot_Revert</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Is_Traded__c) &amp;&amp; PRIORVALUE(Is_Traded__c) &amp;&amp; NOT(Is_Traded__c)</errorConditionFormula>
    <errorMessage>A traded Pokemon cannot be marked as not traded.</errorMessage>
</ValidationRule>