force-app/main/default/objects/Pokemon__c/validationRules/Level_Cannot_Decrease.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_Cannot_Decrease</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Level__c) &amp;&amp; Level__c &lt; PRIORVALUE(Level__c)</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>A Pokemon's level cannot decrease once it has leveled up.</errorMessage>
</ValidationRule>