force-app/main/default/objects/Pokemon__c/validationRules/Level_Must_Be_1_To_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_Must_Be_1_To_100</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED(Level__c)) &amp;&amp; (ISBLANK(Level__c) || Level__c &lt; 1 || Level__c &gt; 100)</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>A Pokemon's level must be between 1 and 100.</errorMessage>
</ValidationRule>