force-app/main/default/objects/Pokemon__c/validationRules/Species_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Species_Cannot_Change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Pokedex_Number__c) || ISCHANGED(Species_Name__c)</errorConditionFormula>
    <errorDisplayField>Species_Name__c</errorDisplayField>
    <errorMessage>A Pokemon's species cannot change — evolution creates a new Pokemon.</errorMessage>
</ValidationRule>