force-app/main/default/objects/Pokemon__c/validationRules/Traded_Cannot_Rename.validationRule-meta.xml
<ValidationRule>
    <fullName>Traded_Cannot_Rename</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Nickname__c) &amp;&amp; PRIORVALUE(Is_Traded__c)</errorConditionFormula>
    <errorMessage>A traded Pokemon cannot be renamed.</errorMessage>
</ValidationRule>