force-app/main/default/objects/Pokemon__c/listViews/All_Pokemon.listView-meta.xml
<ListView>
    <fullName>All_Pokemon</fullName>
    <columns>Sprite__c</columns>
    <columns>NAME</columns>
    <columns>Nickname__c</columns>
    <columns>Level__c</columns>
    <columns>Type__c</columns>
    <columns>Type_2__c</columns>
    <columns>Is_Shiny__c</columns>
    <columns>Can_Evolve__c</columns>
    <columns>Pokemon_Trainer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pokemon</label>
</ListView>